align button correction

--- a/css/mine.css
+++ b/css/mine.css
@@ -128,6 +128,9 @@ h2 {
     .project-description {
         text-align: center;
     }
+    .live-link{
+        margin-top: 1rem;
+    }
 }
 
 
